--- a/style.css
+++ b/style.css
@@ -1,1 +1,342 @@
+/* Removing any borders */
+body {
+  margin: 0;
+  overflow: hidden;
+}
 
+/* Navigation Bar */
+/* -------------------------------------------------------------------------------------------------------- */
+
+/* Add a black background color to the top navigation */
+.topNav {
+  background-color: #000000;
+  height: 50px;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.topNavLinks {
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 25px;
+}
+.topNavButton {
+  color: #f2f2f2;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+/* Add a color to the active/current link on the navigation bar */
+.topnavlinks:focus {
+  color: #ffffff;
+  text-decoration: underline #e3122a;
+}
+
+/* Change the color of links on hover */
+.topnavlinks:hover, .topnavbutton:hover {
+  color: #e3122a;
+}
+
+/* Fitting the logo correctly to the screen*/
+.topnav #logo {
+  margin: 6px;
+  align: center;
+}
+#logoNav {
+  margin-top: 0.5%;
+  margin-left: 0.5%;
+  max-height: 70%;
+  max-width: 70%;
+}
+
+/* Ensuring that whatever page the user is on, is always underlined in the navigation bar */
+#currentPage {
+  color: #ffffff;
+  text-decoration: underline #e3122a;
+}
+
+/* Making each link clear in the hamburger menu dropdown */
+.hamburgerMenu {
+  padding-top: 50px;
+}
+
+/* Creating the bottom border for pictures */
+.pictureOutline {
+  border-bottom: #e3122a 10px solid;
+}
+
+/* Home */
+/* -------------------------------------------------------------------------------------------------------- */
+
+/* Creating the quote slideshow elements */
+.quoteContainerLarge {
+  position: relative;
+  border-top: #e3122a 10px solid;
+  background-color: #292929; 
+  width: 100%; 
+  height: 200px;
+  border-bottom: #e3122a 10px solid;
+}
+.quoteContainerSmall {
+  position: relative;
+  border-top: #e3122a 10px solid;
+  background-color: #292929; 
+  width: 100%; 
+  height: 400px;
+  border-bottom: #e3122a 10px solid;
+}
+
+.quoteContainerTitle {
+  color: white;
+  font-size: 30px;
+}
+
+/* Adding design and animation to the text */
+.item-1, .item-2, .item-3 {
+  color: white;
+	position: absolute;
+  display: block;
+  width: 75%;
+  font-style: italic;
+  font-size: 20px;
+  text-align: center;
+	animation-duration: 30s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+}
+
+/* Specifying the animation */
+.item-1{
+	animation-name: anim-1;
+}
+
+.item-2{
+	animation-name: anim-2;
+}
+
+.item-3{
+	animation-name: anim-3;
+}
+
+@keyframes anim-1 {
+	0%, 8.3% { left: -100%; opacity: 0; }
+  8.3%,25% { left: 12%; opacity: 1; }
+  33.33%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-2 {
+	0%, 33.33% { left: -100%; opacity: 0; }
+  41.63%, 58.29% { left: 12%; opacity: 1; }
+  66.66%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-3 {
+	0%, 66.66% { left: -100%; opacity: 0; }
+  74.96%, 91.62% { left: 12%; opacity: 1; }
+  100% { left: 110%; opacity: 0; }
+}
+
+/* Add an italic font style to all quotes */
+q {font-style: italic;}
+
+/* Creating the "Read More" button elements */
+.readMoreButton:hover {
+  color:white;
+  border-color:black;
+  background-color:black;
+}
+
+.readMoreButton{
+  border-color:#e3122a;
+  padding: 2px;
+  color:#e3122a; 
+  font-size:20px; 
+  text-decoration:none;
+  border: 3px solid #e3122a;
+}
+
+/* Team */
+/* -------------------------------------------------------------------------------------------------------- */
+
+.teamPlace {
+  height: 570px w3-hide-small;
+  background-color: #e3122a;
+}
+
+.teamImage {
+  margin-top: 4px;
+  border: 2px solid black;
+  width: 98%;
+}
+
+.teamFollow {
+  margin-top: -5px;
+  float: left;
+  font-size: 17px;
+  color: #717171;
+  text-decoration: underline;
+}
+
+/* Jobs */
+/* -------------------------------------------------------------------------------------------------------- */
+
+.webLinksText {
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.webLinksText:hover, .jobSpecLink:hover {
+  text-decoration: underline #e3122a; 
+}
+
+/* Dropdown Button */
+.teamDropbtn, .locationDropbtn {
+  color: black;
+  padding: 5px;
+  font-size: 16px;
+  border: 2px solid black;
+  cursor: pointer;
+  min-width: 230px;
+}
+
+/* Dropdown button on hover & focus */
+.teamDropbtn:hover, .teamDropbtn:focus, .locationDropbtn:hover, .locationDropbtn:focus {
+  border-color: #e3122a;
+  color: #e3122a;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.teamDropdown, .locationDropDown {
+  position: relative;
+  display: inline-block;
+  padding-left: 1%;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.teamDropdownContent, .locationDropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #000000;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.teamDropdownContent a, .locationDropdownContent a {
+  border: 1px solid #000000;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.teamDropdownContent a:hover, .locationDropdownContent a:hover {
+  color: #e3122a;
+  text-decoration: underline;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.jobTeamShow, .jobLocationShow {
+  display:block;
+}
+
+hr.solid {
+  border-top: 2px solid #000000;
+  width: 98%;
+}
+
+/* Job Specification */
+/* -------------------------------------------------------------------------------------------------------- */
+
+.jobSpecText {
+  margin-top: -10px; 
+  font-size: 17px;
+}
+
+.interestedButton {
+  background-color: #e3122a;
+  color: #ffffff; 
+  font-size: 25px; 
+  text-decoration: none;
+  border: 2px solid #e3122a;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.referButton {
+  background-color: #ffffff;
+  color: #e3122a; 
+  font-size: 25px; 
+  text-decoration: none;
+  border: 2px solid #e3122a;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+/* Job Apply */
+/* -------------------------------------------------------------------------------------------------------- */
+.formBoxApply {
+  width: 40%;
+  margin-left: 5%;
+  display:inline-block; 
+  vertical-align:top;
+}
+
+.formBoxApplySmall {
+  width: 80%;
+  margin-left: 10%;
+  display:inline-block; 
+  vertical-align:top;
+}
+
+.submitButton{
+  border-color:#e3122a;
+  background-color: #e3122a;
+  padding: 2px;
+  color:#ffffff; 
+  font-size:20px; 
+  text-decoration:none;
+  border: 3px solid #e3122a;
+}
+
+.submitButton:hover{
+  border-color:#000000;
+  background-color: #000000;
+  padding: 2px;
+  color:#ffffff; 
+  font-size:20px; 
+  text-decoration:none;
+  border: 3px solid #000000;
+}
+
+/* Footer */
+/* -------------------------------------------------------------------------------------------------------- */
+
+/* Creating the footer design elements */
+.footer {
+  background-color: black;
+  height: 500px w3-hide-large;
+  width: 100%;
+  bottom: 0;
+}
+
+.logoFooter {
+  padding-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.socialFooterLarge { 
+  height: 50px;
+}
+
+.socialFooterSmall {
+  height: 50px;
+}
+
+.headingFooter {
+  color: #e3122a;
+  padding-top: 10px;
+}
