--- a/style.css
+++ b/style.css
@@ -9,19 +9,19 @@ body {
 
 /* Add a black background color to the top navigation */
 .topNav {
-  background-color: #000000;
+  background-color: #ffffff;
   height: 50px;
   width: 100%;
 }
 
 /* Style the links inside the navigation bar */
 .topNavLinks {
-  color: #f2f2f2;
+  color: #ffffff;
   text-decoration: none;
   font-size: 25px;
 }
 .topNavButton {
-  color: #f2f2f2;
+  color: #ffffff;
   font-size: 25px;
   text-decoration: none;
 }
@@ -29,12 +29,12 @@ body {
 /* Add a color to the active/current link on the navigation bar */
 .topnavlinks:focus {
   color: #000000;
-  text-decoration: underline #e3122a;
+  text-decoration: underline #c7a6cf;
 }
 
 /* Change the color of links on hover */
 .topnavlinks:hover, .topnavbutton:hover {
-  color: #e3122a;
+  color: #c7a6cf;
 }
 
 /* Fitting the logo correctly to the screen*/
@@ -52,7 +52,7 @@ body {
 /* Ensuring that whatever page the user is on, is always underlined in the navigation bar */
 #currentPage {
   color: #ffffff;
-  text-decoration: underline #e3122a;
+  text-decoration: underline #c7a6cf;
 }
 
 /* Making each link clear in the hamburger menu dropdown */
@@ -62,7 +62,7 @@ body {
 
 /* Creating the bottom border for pictures */
 .pictureOutline {
-  border-bottom: #e3122a 10px solid;
+  border-bottom: #c7a6cf 10px solid;
 }
 
 /* Home */
@@ -71,19 +71,19 @@ body {
 /* Creating the quote slideshow elements */
 .quoteContainerLarge {
   position: relative;
-  border-top: #e3122a 10px solid;
+  border-top: #c7a6cf 10px solid;
   background-color: #292929; 
   width: 100%; 
   height: 200px;
-  border-bottom: #e3122a 10px solid;
+  border-bottom: #c7a6cf 10px solid;
 }
 .quoteContainerSmall {
   position: relative;
-  border-top: #e3122a 10px solid;
+  border-top: #c7a6cf 10px solid;
   background-color: #292929; 
   width: 100%; 
   height: 400px;
-  border-bottom: #e3122a 10px solid;
+  border-bottom: #c7a6cf 10px solid;
 }
 
 .quoteContainerTitle {
@@ -147,12 +147,12 @@ q {font-style: italic;}
 }
 
 .readMoreButton{
-  border-color:#e3122a;
+  border-color:#c7a6cf;
   padding: 2px;
-  color:#e3122a; 
+  color:#c7a6cf; 
   font-size:20px; 
   text-decoration:none;
-  border: 3px solid #e3122a;
+  border: 3px solid #c7a6cf;
 }
 
 /* Team */
@@ -160,7 +160,7 @@ q {font-style: italic;}
 
 .teamPlace {
   height: 570px w3-hide-small;
-  background-color: #e3122a;
+  background-color: #c7a6cf;
 }
 
 .teamImage {
@@ -186,7 +186,7 @@ q {font-style: italic;}
 }
 
 .webLinksText:hover, .jobSpecLink:hover {
-  text-decoration: underline #e3122a; 
+  text-decoration: underline #c7a6cf; 
 }
 
 /* Dropdown Button */
@@ -201,8 +201,8 @@ q {font-style: italic;}
 
 /* Dropdown button on hover & focus */
 .teamDropbtn:hover, .teamDropbtn:focus, .locationDropbtn:hover, .locationDropbtn:focus {
-  border-color: #e3122a;
-  color: #e3122a;
+  border-color: #c7a6cf;
+  color: #c7a6cf;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -256,21 +256,21 @@ hr.solid {
 }
 
 .interestedButton {
-  background-color: #e3122a;
+  background-color: #c7a6cf;
   color: #ffffff; 
   font-size: 25px; 
   text-decoration: none;
-  border: 2px solid #e3122a;
+  border: 2px solid #c7a6cf;
   padding-left: 3%;
   padding-right: 3%;
 }
 
 .referButton {
   background-color: #ffffff;
-  color: #e3122a; 
+  color: #c7a6cf; 
   font-size: 25px; 
   text-decoration: none;
-  border: 2px solid #e3122a;
+  border: 2px solid #c7a6cf;
   padding-left: 3%;
   padding-right: 3%;
 }
@@ -292,13 +292,13 @@ hr.solid {
 }
 
 .submitButton{
-  border-color:#e3122a;
-  background-color: #e3122a;
+  border-color:#c7a6cf;
+  background-color: #c7a6cf;
   padding: 2px;
   color:#ffffff; 
   font-size:20px; 
   text-decoration:none;
-  border: 3px solid #e3122a;
+  border: 3px solid #c7a6cf;
 }
 
 .submitButton:hover{
@@ -337,6 +337,6 @@ hr.solid {
 }
 
 .headingFooter {
-  color: #e3122a;
+  color: #c7a6cf;
   padding-top: 10px;
 }
