--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Style the links inside the navigation bar */
 .topNavLinks {
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
   font-size: 25px;
 }
