--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   font-size: 25px;
 }
 .topNavButton {
-  color: #ffffff;
+  color: #000000;
   font-size: 25px;
   text-decoration: none;
 }
