--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 /* Add a black background color to the top navigation */
 .topNav {
-  background-color: #ffffff;
+  background-color: #f3eaf5;
   height: 50px;
   width: 100%;
 }
