--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ hr.solid {
 /* Creating the footer design elements */
 .footer {
   background-color: black;
-  height: 500px w3-hide-large;
+  height: 500px;
   width: 100%;
   bottom: 0;
   margin-top: auto;
