--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 html, body {
   margin: 0;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 /* Navigation Bar */
