--- a/style.css
+++ b/style.css
@@ -320,9 +320,16 @@ hr.solid {
 /* -------------------------------------------------------------------------------------------------------- */
 
 /* Creating the footer design elements */
-.footer {
+.footerLarge {
   background-color: black;
   height: 400px;
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.footerSmall {
+  background-color: black;
+  height: 600px;
   width: 100%;
   flex-shrink: 0;
 }
