--- a/style.css
+++ b/style.css
@@ -110,6 +110,11 @@ main {
 	animation-iteration-count: infinite;
 }
 
+.qImages {
+	padding-left:5px; 
+	padding-right:5px;
+}
+
 /* Specifying the animation */
 .item-1{
 	animation-name: anim-1;
