--- a/style.css
+++ b/style.css
@@ -197,6 +197,12 @@ q {font-style: italic;}
   text-decoration: underline;
 }
 
+.socialLink {
+	padding-left:5px; 
+	padding-right:5px;
+	height: 50px;
+}
+
 /* Jobs */
 /* -------------------------------------------------------------------------------------------------------- */
 
