--- a/style.css
+++ b/style.css
@@ -198,9 +198,9 @@ q {font-style: italic;}
 }
 
 .socialLink {
-	padding-left:5px; 
-	padding-right:5px;
-	height: 50px;
+	margin-top:-5px;
+	padding-left:10px; 
+	height: 30px;
 }
 
 /* Jobs */
