--- a/style.css
+++ b/style.css
@@ -179,8 +179,7 @@ q {font-style: italic;}
 /* -------------------------------------------------------------------------------------------------------- */
 
 .teamPlace {
-  	height: 400px;
-	width: 80%;
+	width: 80%:
 	background-color: #c7a6cf;
 }
 
