--- a/style.css
+++ b/style.css
@@ -178,23 +178,18 @@ q {font-style: italic;}
 /* Team */
 /* -------------------------------------------------------------------------------------------------------- */
 
-.teamPlace {
-	width: 80%:
-	background-color: #c7a6cf;
-}
-
 .teamImage {
-  margin-top: 4px;
-  border: 2px solid black;
-  width: 98%;
+	  margin-top: 4px;
+	  border: 2px solid black;
+	  width: 300px;
 }
 
 .teamFollow {
-  margin-top: -5px;
-  float: left;
-  font-size: 17px;
-  color: #717171;
-  text-decoration: underline;
+	  margin-top: -5px;
+	  float: left;
+	  font-size: 17px;
+	  color: #717171;
+	  text-decoration: underline;
 }
 
 .socialLink {
