--- a/style.css
+++ b/style.css
@@ -198,6 +198,14 @@ q {font-style: italic;}
 	height: 30px;
 }
 
+.highlight-box {
+  background-color: #c7a6cf; /* or any color you like */
+  padding: 15px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
 /* Jobs */
 /* -------------------------------------------------------------------------------------------------------- */
 
