--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ q {font-style: italic;}
 
 .socialLink {
 	padding-left:10px; 
-	height: 50px;
+	height: 30px;
 }
 
 .highlight-box {
@@ -202,8 +202,8 @@ q {font-style: italic;}
  	margin-bottom: 5px;
 	max-width: 300px;        /* responsive max width */
   	margin: 0 auto;
-	padding-left:5px;
-	padding-right:5px;
+	margin-left:5px;
+	margin-right:5px;
 }
 
 /* Jobs */
