--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
   flex: 1 0 auto;
 }
 
-h1 {
+h1, h2 {
   font-family: "arsenica-variable",sans-serif;
   font-variation-settings: 'wght' 400, 'opsz' 100;
 }
