--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ main {
 }
 
 h1, h2 {
-  font-family: "arsenica-variable",sans-serif;
-  font-variation-settings: 'wght' 400, 'opsz' 100;
+  	font-family: arsenica-variable, sans-serif;
+	font-style: normal;
+	font-variation-settings: "opsz" 100, "wght" 400;
 }
 
 /* Navigation Bar */
