--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /* Removing any borders */
 html, body {
-  margin: 0;
-  display: flex;
-  padding: 0;
-  flex-direction: column;
+  	margin: 0;
+  	display: flex;
+  	padding: 0;
+  	flex-direction: column;
+	overflow-x: hidden;
 }
 
 main {
