--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@ main {
 }
 
 h1, h2 {
-  	font-family: arsenica-variable, sans-serif;
-	font-style: normal;
-	font-variation-settings: "opsz" 500, "wght" 600;
+	font-family: "arsenica-variable", sans-serif;
+	font-variation-settings: "opsz" 100, "wght" 400;
 }
 
 /* Navigation Bar */
