--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main {
 h1, h2 {
 	font-family: arsenica-variable, sans-serif;
 	font-variation-settings: "opsz" 100, "wght" 400;
-	background-color: red;
+	font-color: red;
 }
 
 /* Navigation Bar */
