--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@ h3 {
 
 /* Style the links inside the navigation bar */
 .topNavLinks {
-  color: #000000;
-  text-decoration: none;
-  font-size: 25px;
+  	color: #000000;
+  	text-decoration: none;
+  	font-size: 25px;
+	font-family: "arsenica variable", serif !important;
+	font-variation-settings: "wght" 400 !important;
 }
 .topNavButton {
   color: #000000;
