--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ q {font-style: italic;}
 }
 
 .eventSquare{
+  color: white;
   border-radius: 15px; /* one value */
   background: #292929;
   height: 300px;
