--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ q {font-style: italic;}
   color: white;
   border-radius: 15px; /* one value */
   background: #292929;
-  height: 300px;
+  height: 500px;
   margin: 0 auto;
   padding-left: 5px;
   padding-right: 5px;
@@ -200,6 +200,7 @@ q {font-style: italic;}
 }
 
 .eventSquareImage{
+  border-radius: 15px; /* one value */
   box-sizing: border-box;
   width: 100%;
   padding: 5px;
