--- a/style.css
+++ b/style.css
@@ -196,7 +196,10 @@ q {font-style: italic;}
   margin: 0 auto;
   padding-left: 5px;
   padding-right: 5px;
+  padding-bottom: 10px;
   overflow: hidden;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .eventSquareImage{
@@ -204,6 +207,7 @@ q {font-style: italic;}
   box-sizing: border-box;
   width: 100%;
   padding: 5px;
+  display: block;
 }
 
 /* Team */
