--- a/style.css
+++ b/style.css
@@ -219,6 +219,17 @@ q {font-style: italic;}
   overflow: hidden;
 }
 
+.imageWrap {
+  height: 220px;       /* choose what looks right */
+  overflow: hidden;
+}
+
+.imageWrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* use cover if cropping is OK */
+}
+
 /* Team */
 /* -------------------------------------------------------------------------------------------------------- */
 
