--- a/style.css
+++ b/style.css
@@ -407,6 +407,21 @@ hr.solid {
   border: 3px solid #000000;
 }
 
+
+/* Games */
+/* -------------------------------------------------------------------------------------------------------- */
+.videoWrapper {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+
+.videoWrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+
 /* Footer */
 /* -------------------------------------------------------------------------------------------------------- */
 
