--- a/style.css
+++ b/style.css
@@ -250,8 +250,7 @@ q {font-style: italic;}
   top: 50%;
   width: auto;
   margin-top: -22px;
-  padding: 16px;
-  color: white;
+  color: purple;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -272,7 +271,7 @@ q {font-style: italic;}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: red;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
