--- a/style.css
+++ b/style.css
@@ -294,6 +294,18 @@ q {font-style: italic;}
   background-color: #717171;
 }
 
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
 
 /* Team */
 /* -------------------------------------------------------------------------------------------------------- */
