--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ q {font-style: italic;}
   top: 50%;
   width: auto;
   margin-top: -22px;
-  color: purple;
+  color: #c7a6cf;
   font-weight: bold;
   font-size: 25px;
   transition: 0.6s ease;
