--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ h3 {
   }
 }
 
+.row-gap {
+  margin-bottom: 40px;
+}
+
 /* Navigation Bar */
 /* -------------------------------------------------------------------------------------------------------- */
 
