--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ h3 {
   margin-bottom: 50px;
 }
 
+.w3-row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* Navigation Bar */
 /* -------------------------------------------------------------------------------------------------------- */
 
