--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 body {
 	display: flex;
 	flex-direction: column;
-	outline: 10px solid red !important;
+	background: red !important;
 }
 
 main {
