--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ main {
 }
 
 h1, h2 {
-	font-family: "arsenica variable", serif !important;
+	font-family: arsenica-variable, serif !important;
 	font-variation-settings: "wght" 500 !important;
 }
 
 h3 {
-	font-family: "arsenica variable", serif !important;
+	font-family: arsenica-variable, serif !important;
 	font-variation-settings: "wght" 400 !important;
 }
 
@@ -55,7 +55,7 @@ h3 {
   	color: #000000;
   	text-decoration: none;
   	font-size: 25px;
-	font-family: "arsenica variable", serif !important;
+	font-family: arsenica-variable, serif !important;
 	font-variation-settings: "wght" 400 !important;
 }
 .topNavButton {
